--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "angular": "^1.7.2",
+    "dotenv": "^6.1.0",
     "express": "^4.16.4",
     "request": "^2.88.0"
   },
